# gz-spirobs

./: README.md
gz_spirob_description/: CMakeLists.txt  package.xml
gz_spirob_description/hooks/: gz_spirob_description.dsv.in  gz_spirob_description.sh.in
gz_spirob_description/models/spirob_3d/: model.config  model.sdf
gz_spirob_description/models/spirob_3d/meshes/: baselink.stl  robot.xml
gz_spirob_description/models/spirob_arm/: model.config  model.sdf
gz_spirob_description/models/spirob_arm/meshes/: baselink.stl  robot.xml
gz_spirob_description/worlds/: spirob.sdf  spirob_3d.sdf
gz_spirob_gazebo/: CMakeLists.txt  package.xml
gz_spirob_gazebo/scripts/: grasp_2d.py  grasp_slid.py
gz_spirob_gazebo/src/tendon/: Tendon.cc  Tendon.hh
